# haskell-tags-server

./: .gitignore  .hlint.yaml  haskell-tags-server.cabal  stack.yaml  tags-server.cabal
elisp/: haskell-tags-server-tests.el  haskell-tags-server.el
src/: LoadModule.hs  Logging.hs  Main.hs  Search.hs  Server.hs  Types.hs  Utils.hs
src/Control/Arrow/: Ext.hs
src/Control/Monad/: EitherCPS.hs  Ext.hs  Filesystem.hs  Logging.hs
src/Control/Monad/Except/: Ext.hs
src/Control/Monad/Filesystem/: FileSearch.hs
src/Control/Monad/Filesystem/FileSearch/: Class.hs
src/Control/Monad/Logging/: Simple.hs
src/Control/Parallel/Strategies/: Ext.hs
src/Data/: CompiledRegex.hs  Condition.hs  ErrorMessage.hs  Filesystem.hs  HasLens.hs  IgnoreEqOrdHash.hs  KeyMap.hs  MonoidalMap.hs  Path.hs  Promise.hs  SubkeyMap.hs  SymbolMap.hs  Symbols.hs
src/Data/Foldable/: Ext.hs
src/Data/Map/: NonEmpty.hs
src/Data/Path/: Internal.hs
src/Data/Symbols/: MacroName.hs
src/Data/Text/Prettyprint/Doc/: Ext.hs
src/Haskell/Language/: Lexer.hs
src/Haskell/Language/Lexer/: Env.hs  FastTags.hs  Input.hs  InputStack.hs  Lexer.x  LexerTypes.hs  Monad.hs  Preprocessor.hs  RulePredicate.hs  State.hs  Types.hs
src/Haskell/Language/Lexer/FastTags/: TagValPatterns.hs
src/Haskell/Language/LexerSimple/: LensBlaze.hs  Lexer.x  Types.hs
src/Haskell/Language/Server/: BERT.hs  Sexp.hs  Tags.hs
src/Haskell/Language/Server/Tags/: AnalyzeHeader.hs  LoadFiles.hs  LoadModule.hs  Search.hs  SearchM.hs  Types.hs
src/Haskell/Language/Server/Tags/Types/: Imports.hs  Modules.hs
src/Server/: BERT.hs  Tags.hs
src/Server/Tags/: AnalyzeHeader.hs  LoadModule.hs  Search.hs  SearchM.hs  Types.hs
src/Text/PrettyPrint/Leijen/Text/: Ext.hs  Utils.hs
test-data/: Imported1.hs  ModuleWithImportsThatHaveExportsList.hs  ModuleWithMultilineExportList.hs  SingleModule.hs
test-data/0001module_with_imports/: Imported1.hs  Imported2.hs  ModuleWithEmptyImportList.hs  ModuleWithImports.hs  ModuleWithImportsAndHiding.hs  ModuleWithMultilineImportList.hs  ModuleWithQualifiedImport.hs  ModuleWithQualifiedImportNoAlias.hs
test-data/0002export_lists/: ModuleWithExplicitExport.hs  ModuleWithExportList.hs  ModuleWithImportsThatHaveModuleReexports.hs  ModuleWithImportsThatHaveReexports.hs  ModuleWithModuleReexport.hs  ModuleWithQualifiedModuleReexport.hs  ModuleWithQualifiedReexport.hs  ModuleWithUnqualifiedReexport.hs  ModuleWithWildcardExport.hs  ModuleWithWildcardExports.hs
test-data/0004typeclass_export_associated_types/: MainModule.hs  ModuleWithTypeclass.hs
test-data/0005import_cycle/: A.hs  AWithExportList.hs  B.hs  BWithExportList.hs
test-data/0006export_pattern_with_type_ghc8.0/: ModuleThatExportsPattern.hs  ModuleWithSpecificImportList.hs  ModuleWithWildcardImportList.hs  ModuleWithoutImportList.hs
test-data/0007resolvable_import_cycle/: A.hs  B.hs  C.hs  D.hs  E.hs  F.hs  G.hs  H.hs
test-data/0008module_reexport/: Module1.hs  Module2.hs  Module3.hs  ModuleWithImportsThatHaveModuleReexports.hs  ModuleWithModuleReexport.hs  ModuleWithModuleReexportViaAlias.hs  ModuleWithQualifiedModuleReexport.hs
tests/: LogCollectingServer.hs  Main.hs  PortPool.hs  ServerTests.hs  TestUtils.hs
tests/Control/Monad/Logging/: DiscardLogs.hs
tests/Haskell/Language/Lexer/: Tests.hs  Tokenisation.hs  TokenisationUtils.hs
tests/Haskell/Language/Lexer/Preprocessor/: Tests.hs
tests/Haskell/Language/Server/Tags/: AnalyzeHeaderTests.hs  TypesTests.hs
tests/Haskell/Language/Server/Tags/AnalyzeHeaderTests/: Regressions.hs
tests/Server/Tags/: AnalyzeHeaderTests.hs  TypesTests.hs
tests/ServerTests/: LogCollectingServer.hs
tests/Text/RawString/QQ/: Text.hs
