name:
  haskell-tags-server
version:
  0.1.0.0
synopsis:
  Server that looks up haskell entities, similar to tags in editors but more precise
-- description:
license:
  BSD3
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  serg.foo@gmail.com
category:
  Development
build-type:
  Simple
cabal-version:
  >=1.16

library
  build-depends:
    attoparsec >= 0.13.0.2,
    array,
    base >=4,
    bert >=1.2.2.5,
    bytestring,
    containers,
    directory,
    dlist,
    exceptions >= 0.8,
    extra >= 1.4.2,
    fast-tags >=1.2,
    filepath,
    haskell-src-exts >=1.16,
    monad-control >=1.0,
    mtl >= 2.2,
    network >=2.6,
    regex-tdfa >=1.2.2,
    regex-tdfa-text,
    semigroups,
    stm,
    text,
    time,
    transformers,
    transformers-base,
    utf8-string >=0.3,
    wl-pprint-text >= 1.1.0.4
  exposed-modules:
    Control.Arrow.Ext
    Control.Monad.Ext
    Control.Monad.Filesystem
    Control.Monad.Logging
    Control.Monad.Logging.Simple
    Data.CompiledRegex
    Data.Condition
    Data.Foldable.Ext
    Data.KeyMap
    Data.MonoidalMap
    Data.Promise
    Data.SubkeyMap
    Data.SymbolMap
    Data.Symbols
    Haskell.Language.Server.BERT
    Haskell.Language.Server.Tags
    Haskell.Language.Server.Tags.AnalyzeHeader
    Haskell.Language.Server.Tags.Types
    Text.PrettyPrint.Leijen.Text.Utils
  other-modules:
    Haskell.Language.Server.Tags.LoadModule
    Haskell.Language.Server.Tags.LoadFiles
    Haskell.Language.Server.Tags.Search
    Haskell.Language.Server.Tags.SearchM
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
  ghc-prof-options:
    -fprof-auto

executable haskell-tags-server
  main-is:
    src/Main.hs
  build-depends:
    base >=4,
    bert,
    containers,
    directory,
    filepath,
    mtl,
    network,
    optparse-applicative,
    haskell-tags-server,
    text
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
    -threaded
  ghc-prof-options:
    -fprof-auto

test-suite test-haskell-tags-server
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    Control.Monad.Logging.DiscardLogs
    Haskell.Language.Server.Tags.AnalyzeHeaderTests
    Haskell.Language.Server.Tags.TypesTests
    PortPool
    ServerTests
    ServerTests.LogCollectingServer
  build-depends:
    base,
    bert,
    containers,
    directory,
    dlist,
    exceptions,
    fast-tags,
    filepath,
    monad-control,
    mtl,
    network,
    regex-tdfa,
    regex-tdfa-text,
    semigroups,
    stm,
    haskell-tags-server,
    tasty >=0.7,
    tasty-hunit >=0.4,
    template-haskell,
    text,
    transformers-base,
    utf8-string,
    wl-pprint-text
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
    -threaded
  ghc-prof-options:
    -fprof-auto
