name:
  haskell-tags-server
version:
  0.1.0.0
synopsis:
  Server that looks up haskell entities, similar to tags in editors but more precise
-- description:
license:
  BSD3
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  serg.foo@gmail.com
category:
  Development
build-type:
  Simple
cabal-version:
  >=1.16

library
  build-depends:
    attoparsec >=0.13.1.0,
    array,
    base >=4,
    bert >=1.2.2.5,
    bytestring,
    containers,
    directory,
    dlist,
    exceptions >=0.8,
    extra >=1.4.2,
    fast-tags >=1.3,
    filepath,
    haskell-src-exts >=1.16,
    microlens,
    monad-control >=1.0,
    mtl >=2.2,
    network >=2.6,
    profunctors >= 5.2,
    regex-tdfa >=1.2.2,
    regex-tdfa-text,
    semigroupoids,
    semigroups,
    stm,
    text,
    time,
    transformers,
    transformers-base,
    utf8-string >=0.3,
    wl-pprint-text >=1.1.0.4
  exposed-modules:
    Control.Arrow.Ext
    Control.Monad.Ext
    Control.Monad.Except.Ext
    Control.Monad.Filesystem
    Control.Monad.Filesystem.FileSearch
    Control.Monad.Filesystem.FileSearch.Class
    Control.Monad.Logging
    Control.Monad.Logging.Simple
    Data.CompiledRegex
    Data.Condition
    Data.ErrorMessage
    Data.Foldable.Ext
    Data.KeyMap
    Data.Map.NonEmpty
    Data.MonoidalMap
    Data.Path
    Data.Promise
    Data.SubkeyMap
    Data.SymbolMap
    Data.Symbols
    Haskell.Language.Lexer
    Haskell.Language.Lexer.InputStack
    Haskell.Language.Lexer.Lexer
    Haskell.Language.Lexer.LexerTypes
    Haskell.Language.Lexer.Preprocessor
    Haskell.Language.Server.BERT
    Haskell.Language.Server.Tags
    Haskell.Language.Server.Tags.AnalyzeHeader
    Haskell.Language.Server.Tags.Types
    Text.PrettyPrint.Leijen.Text.Ext
  other-modules:
    Haskell.Language.Server.Tags.LoadModule
    Haskell.Language.Server.Tags.LoadFiles
    Haskell.Language.Server.Tags.Search
    Haskell.Language.Server.Tags.SearchM
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
  ghc-prof-options:
    -fprof-auto
  build-tools:
    alex >= 3.1.7

executable haskell-tags-server
  main-is:
    src/Main.hs
  build-depends:
    base >=4,
    bert,
    containers,
    directory,
    filepath,
    mtl,
    network,
    optparse-applicative,
    haskell-tags-server,
    text
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
    -threaded
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
  ghc-prof-options:
    -fprof-auto

test-suite test-haskell-tags-server
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    Control.Monad.Logging.DiscardLogs
    Haskell.Language.Lexer.Tests
    Haskell.Language.Lexer.Preprocessor.Tests
    Haskell.Language.Server.Tags.AnalyzeHeaderTests
    Haskell.Language.Server.Tags.AnalyzeHeaderTests.Regressions
    Haskell.Language.Server.Tags.TypesTests
    PortPool
    ServerTests
    ServerTests.LogCollectingServer
    TestUtils
  build-depends:
    base,
    bert,
    bytestring,
    containers,
    directory,
    dlist,
    exceptions,
    fast-tags,
    filepath,
    monad-control,
    mtl,
    network,
    raw-strings-qq,
    regex-tdfa,
    regex-tdfa-text,
    semigroups,
    stm,
    haskell-tags-server,
    tasty >=0.7,
    tasty-hunit >=0.4,
    template-haskell,
    text,
    transformers-base,
    utf8-string,
    wl-pprint-text
  ghc-options:
    -Wall
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -rtsopts
    -threaded
  if impl(ghc >= 8.0)
    ghc-options:
      -Wcompat
  ghc-prof-options:
    -fprof-auto
