name:
  tags-server
version:
  0.1.0.0
synopsis:
  Server that looks up haskell entities, similar to tags in editors but more precise
-- description:
license:
  BSD3
license-file:
  LICENSE
author:
  Sergey Vinokurov
maintainer:
  serg.foo@gmail.com
category:
  Development
build-type:
  Simple
cabal-version:
  >=1.16

library
  build-depends:
    array,
    base >=4,
    bert >=1.2.2.5,
    containers,
    directory,
    fast-tags >=1.2,
    filemanip,
    filepath,
    haskell-src-exts >=1.16,
    hslogger >=1.2,
    mtl,
    network >=2.6,
    regex-tdfa >=1.2.2,
    regex-tdfa-text,
    semigroups,
    stm,
    text,
    time,
    transformers,
    utf8-string >=0.3
  exposed-modules:
    LoadModule
    Logging
    Search
    Server
    Types
  other-modules:
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -ferror-spans -rtsopts
  ghc-prof-options:
    -fprof-auto

executable tags-server
  main-is:
    src/Main.hs
  build-depends:
    base >=4,
    bert,
    containers,
    directory,
    filepath,
    network,
    optparse-applicative,
    tags-server
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -ferror-spans -rtsopts
  ghc-prof-options:
    -fprof-auto

test-suite test-tags-server
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    tests
  main-is:
    Main.hs
  other-modules:
    LogCollectingServer
    ServerTests
  build-depends:
    base,
    bert,
    containers,
    directory,
    dlist,
    filepath,
    hslogger,
    network,
    regex-tdfa,
    regex-tdfa-text,
    stm,
    tags-server,
    tasty >=0.7,
    tasty-hunit >=0.4,
    utf8-string
  ghc-options:
    -Wall
    -fwarn-monomorphism-restriction
    -fno-warn-type-defaults
    -fno-warn-name-shadowing
    -ferror-spans -rtsopts
  ghc-prof-options:
    -fprof-auto
